traces/bug_540.txt
examples++-load/Element_Mixte.cpp:659: error: DEAD_STORE
  The value written to &i2 (type int) is never used.
Showing all 1 steps of the trace


examples++-load/Element_Mixte.cpp:659:4: Write of unused value
657.   	  int i=e;
658.   	  int ii[2]={(e+1)%3,(e+2)%3};
659.   	  int i2=(e+2)%3;
          ^
660.   	  R s = eo[e]/CKK;
661.   	  if(s<0) Exchange(ii[0],ii[1]); // 
